# vcpkg_cassandra

./: .gitignore  CMakeLists.txt  my_library.c  test.c
cpp-driver/: CMakeLists.txt
cpp-driver/cmake/: Dependencies.cmake
